# chess_move_validator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: pgn_setup.rs
src/: lib.rs  model.rs  piece_data.rs  position_cursor.rs
src/rules/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
