[package]
name = "chess_move_validator"
version = "0.1.0"
authors = ["Marco Herrera-Rendon <mherrerarendon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_pgn_parser = { git = "https://github.com/mherrerarendon/chess_pgn_parser" }

[[example]]
name = "pgn_setup"